[package]
name = "flowsurface-web-rs"
version = "0.1.0"
authors = ["Berke <63060680+akenshaw@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "CanvasRenderingContext2d", "Window", "HtmlCanvasElement", "Document", "CustomEvent", "Response", "Request", "RequestInit", "TextMetrics"] }
js-sys = "0.3"

console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"